--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -25,7 +25,7 @@
       }
     ],
     "no-console": 1,
-    "quotes": ["warning", "single", { "allowTemplateLiterals": true }],
+    "quotes": ["warn", "single", { "allowTemplateLiterals": true }],
     "func-names": 0,
     "space-unary-ops": 2,
     "space-in-parens": "error",
