--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "outside",
   "version": "2.0.0",
+  "type": "module",
   "description": "Boilerplate for WDD 330 SleepOutside project",
   "main": "main.js",
   "scripts": {
@@ -18,7 +19,7 @@
     "eslint-plugin-import": "^2.29.1",
     "jest": "^29.7.0",
     "prettier": "^3.2.5",
-    "vite": "^5.4.7"
+    "vite": "^6.2.1"
   },
   "babel": {
     "presets": [
@@ -33,3 +34,4 @@
     "last 3 safari versions"
   ]
 }
+
